# langchain-curso-alura

./: .gitignore  README.md  agente.py  indexar.py  main.py  pyproject.toml
vectorstore/: index.pkl
